--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^5.6.0",
+    "uuid": "^11.1.0",
     "ws": "^8.18.3",
     "zustand": "^5.0.6"
   },
